Add `audit` endpoint to retrieve change history records for submitted data (#80)
* root dependencies

* update apps and packages dependencies

* unit test dependencies

* install sinon dependency

* unit tests SQON and File utils

* Test Format Utils

* Audit endpoint implementation

* unit test for audit functions

* 0.3.0

* Delete dictionarySchemasTestData.ts

* revert 0.2.2

* update audit event utils

* Add query params schema validation

* add Path Params schema validation

* use RequestHandler to validate Requests

* refactor zod enum audit events

* refactor audit action enum to use zod

* remove transform on audit action zod validation
